<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/apps_background"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/share_to_friends"
        android:id="@+id/share_header_img"
        android:scaleType="fitXY"
        />

    <include  layout="@layout/header_layout"
        android:id="@+id/header_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/share_header_img"
        android:background="@drawable/background"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            >
            <com.komugi.textviewtypeface.CenturyGothicTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:id="@+id/share_head"
                android:text="@string/share_head"
                android:textColor="@color/text_colur"
                android:textSize="14dp"
              android:layout_gravity="center"
                />
            <com.komugi.textviewtypeface.CentuaryGothicBoldTextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:id="@+id/invite_code_tv"
                android:textColor="@color/text_colur"
                android:textSize="14dp"
                android:background="@drawable/white_bg"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="JESICA1018"
                />

            <com.komugi.textviewtypeface.CentuaryGothicBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/details_rm"
                android:textColor="@color/text_colur"
                android:textSize="12dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_marginTop="5dp"
                />

            <com.komugi.textviewtypeface.CenturyGothicItalicTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/details"
                android:gravity="center"
                android:id="@+id/details_tv"
                android:textColor="@color/text_colur"
                android:layout_gravity="center"
                android:textSize="13dp"
                android:layout_marginTop="20dp"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/share_to_friends_btn"
                android:layout_margin="20dp"
                android:id="@+id/share_to_frnd_img"
                />


        </LinearLayout>
    </RelativeLayout>

    <include  layout="@layout/bottom_layout"
        android:id="@+id/bottom_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>
